hot fix: header padding and margin on mobile

--- a/frontend/src/blocks/header.css
+++ b/frontend/src/blocks/header.css
@@ -30,6 +30,7 @@
 .header__link_hidden {
   display: none;
 }
+
 .header__menu {
   /* flex-direction: column; */
   display: grid;
@@ -42,7 +43,7 @@
   /* align-items: center; */
 }
 .header__menu_open {
-  margin: 0 auto;
+  margin: 0px;
   padding: 0;
 }
 .header__btn {
@@ -50,7 +51,7 @@
   justify-self: end;
   border: none;
   align-items: flex-end;
-  /* display:none; */
+ 
 }
 .header__btn_closed {
   background: #000 url(../images/mobileMenu.png) no-repeat;
@@ -108,6 +109,7 @@
   }
   .header__menu_open {
     margin: 0;
+    padding:0;
   }
   .header__btn {
     margin-right: 30px;
